[package]
name = "cbstream-rust"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["blocking", "http2", "rustls-tls","gzip"], default-features = false }
scopeguard = "1.2.0"
serde_json = "1.0.140"
sha2 = "0.10.9"
signal-hook = "0.3.17"
sysinfo = { version = "0.35.1", features = ["linux-tmpfs"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
