[package]
name = "cbstream-rust"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["blocking", "gzip"] }
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
signal-hook = "0.4.4"
sysinfo = { version = "0.39.2", features = ["linux-tmpfs"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
